--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <title>Typing Test</title>
 </head>
 <body>
-    <p class="logo">Typing Test</p>
+    <p class="logo" id="logo">Typing Test</p>
 
     <div class="main_body">
         <!--this container has all contents inside-->
         <div class="container">
-
+            <p id="head">Typing Test</p>
+            <p id="score">Your Score:</p>
             <div class="results">
                 <button id="wpm" style="display: none;">WPM: </button>
                 <button id="error" style="display: none;">Errors: </button>
